--- a/chat-web/src/App.css
+++ b/chat-web/src/App.css
@@ -61,7 +61,14 @@
 }
 
 .signOutButton{
+
   float: right;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  letter-spacing: 2px;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  padding: 0.25em 0.5em;
+  font-size: 16px;
 }
 .signInButton{
   
