added user state, header seen when user logged in, sign in seen when user isnt signed in

--- a/chat-web/src/App.css
+++ b/chat-web/src/App.css
@@ -105,6 +105,7 @@
   height: 2rem;
   background-color: azure;
   padding: 0.5rem;
+  /* display: none; */
   /* display: none; */  /* before logging in display none -  after display flex or smth*/  
 }
 .main{
