--- a/chat-web/src/App.css
+++ b/chat-web/src/App.css
@@ -131,6 +131,116 @@
   opacity: 1;
 
 }
+.container {
+  position: absolute;
+  right: 450px;
+  top: -50px;
+  margin: 12% auto;
+  width: 850px;
+  height: 550px;
+}
+.chatbox {
+  position: absolute; 
+  left: 35%;
+  height: 75%;
+  width: 60%;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px rgba(#777777, 0.5);
+}
+.top-bar {
+  width: 100%;
+  height: 60px;
+  background:  #F9FBFF;
+  border-radius: 10px 10px 0 0;
+}
+.avatar {
+  width: 35px;
+  height: 35px;
+  background: linear-gradient(to bottom left, #79C7C5 20%, #A1E2D9 100%);
+  border-radius: 50%;
+  position: absolute;
+  top: 11px;
+  left: 15px;
+}
+.name {
+  position: absolute;
+  top: 22px;
+  text-transform: uppercase;
+  color: #777777;
+  font-size: .8em;
+  letter-spacing: 2px;
+  font-weight: 500;
+  left: 60px;
+}
+
+.menu {
+  position: absolute;
+  right: 10px;
+  top: 20px;
+  width: 10px;
+  height: 20px;
+  cursor: pointer;
+}
+.menu:hover {
+    transform: scale(1.1);
+    transition: all .3s ease-in;
+  }
+.icons {
+  position: absolute;
+  color: #A1E2D9;
+  padding: 10px;
+  top: 5px;
+  right: 21px;
+  cursor: pointer;
+}
+.dots {
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #79C7C5;
+  box-shadow: 0px 7px 0px #79C7C5, 0px 14px 0px #79C7C5;
+}
+.middle {
+  position: absolute;
+  background:  #F9FBFF;
+  width: 100%;
+  opacity: 0.85;
+  top: 60px;
+  height: 80%;
+}
+.bottom-bar {
+  position: absolute;
+  width: 100%;
+  height: 55px;
+  bottom: 0;
+  background:  #F9FBFF;
+  border-radius: 0 0 10px 10px;
+}
+input {
+  padding: 7px;
+  width: 74%;
+  left: 5%;
+  position: absolute;
+  border: 0;
+  top: 13px;
+  background: #F9FBFF;
+  color: #79C7C5;
+}
+.send {
+  position: absolute;
+  border: 0;
+  font-size: 1em;
+  color: darkcyan;
+  top:  19px;
+  opacity: 0.8;
+  right: 17px;
+  cursor: pointer;
+  outline: 0;}
+.send:hover {
+    transform: scale(1.1);
+    transition: all .3s ease-in-out;
+    color: lightseagreen;
+  }
 
 @keyframes App-logo-spin {
   from {
