--- a/chat-web/src/ExitPage.css
+++ b/chat-web/src/ExitPage.css
@@ -1,3 +1,33 @@
+.slide{
+  position: relative;
+  width: 60%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.slide1{
+    position: absolute;
+    bottom: 0px;
+}
+
+.mainButtonSection{
+  margin: 0 1.5% 24px 1.5%;
+  position: absolute;
+
+}
+
+.backtToMainButton{
+  width: auto;
+  margin: auto;
+  align-items: center;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  letter-spacing: 2px;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  padding: 0.25em 0.5em;
+  font-size: 16px;
+}
+
 .ExitPage {
     background-color: #282c34;
     min-height: 100vh;
@@ -20,7 +50,7 @@
     font-size: 22px;
     height: 30%;
     background-color: #194969;
-    border-radius: 4px;
+    border-radius: px;
     border-width: 0;
     box-shadow: #7373af;
     box-sizing: border-box;
