--- a/chat-web/src/App.css
+++ b/chat-web/src/App.css
@@ -6,6 +6,10 @@ body{
   overflow-wrap: break-word;
 }
 
+html, body {
+  height: 100%;
+}
+
 p{
   margin: 0px;
   padding: 0px;
@@ -68,7 +72,10 @@ li:hover{
 }
 .App {
   background-color: #244254;
-  min-height: 100vh;
+  width:100%;
+  height:90%;
+  align-items: flex-start;
+  justify-content: center;
 }
 .App-logo {
   float:left;
@@ -139,9 +146,12 @@ li:hover{
   /* display: none; */  /* before logging in display none -  after display flex or smth*/  
 }
 .main{
+  display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 3.5rem)
+  
+  height: calc(100vh - 3.5rem);
+  width:  100%;
 }
 
 .signInSection{
@@ -153,7 +163,7 @@ li:hover{
   -webkit-box-shadow: 7px 7px 51px 7px rgba(0,0,0,0.75);
   -moz-box-shadow: 7px 7px 51px 7px rgba(0,0,0,0.75);
   box-shadow: 7px 7px 51px 7px rgba(0,0,0,0.75);  padding: 1rem;
-  margin: 10rem;
+  margin: 3rem;
   background-color: #244254;
   border-radius: 80px;
   opacity: 1;
